--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "react-icons": "^4.2.0",
     "react-spinners": "^0.11.0",
     "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1"
   }
 }
