--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "gatsby-starter-medusa",
   "version": "1.0.0",
   "private": true,
-  "description": "gatsby-starter-medusa",
+  "description": "A Contentful and Gatsby storefront to be used with a Medusa server that is integrated with Contentful",
   "author": "Kasper Fabricius Kristensen <kasper@medusa-commerce.com> (https://www.medusa-commerce.com)",
   "keywords": [
     "gatsby",
     "medusajs",
-    "e-commerce"
+    "e-commerce",
+    "medusa-storefront"
   ],
   "scripts": {
     "develop": "gatsby develop",
